changed the URL to absolute.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+   <title>Redirection page</title>
+   </head>   
 <body>
 <script type="text/javascript">
    	// Javascript URL redirection
-    window.location.replace("/2018");
+    window.location.replace("https://tourismkg.github.io/2018/");
 </script>
 </body>
 </html>
